--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -1,4 +1,4 @@
 .vedio-cards iframe{
-  width: 486px;
+  width: 286px;
   height: 180px;
 }
