--- a/scss/module.scss
+++ b/scss/module.scss
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   justify-content: space-around;
-  position: fixed;
+  // position: fixed;
 }
 .container-fluid{
   padding-bottom: 30px;
@@ -11,4 +11,8 @@
 }
 .accordion .card-header{
   background-color: rgb(0, 0, 194);
+}
+.accordion h2{
+  background-color: rgb(0, 0, 194);
+  padding-bottom: 10px;
 }
